--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,11 @@
     <color name="black">#000000</color>
     <color name="choose_eara_item_press_color">#f4f4f4</color>
     <color name="white">#ffffff</color>
+    <color name="popup_bg">#b0000000</color>
+    <color name="gray_line">#d9d9d9</color>
+    <color name="text_color">#4c4c4c</color>
+    <color name="divide_home">#D9D9D9</color>
     <color name="no_color">#00000000</color>
+    <color name="tv_address">#4d4d4d</color>
+    <color name="hui_text">#BCBCBC</color>
 </resources>
